@@ -14,5 +14,5 @@ DIST open-vm-tools-2008.10.10-123053.tar.gz 3186908 RMD160 770cb2ccfca24814cbd04
 EBUILD open-vm-tools-0.0.20080414.87182.ebuild 3683 RMD160 1ed0a118495b177076ac4585c512770047ccc02b SHA1 49b56355f9b39f5f2c71fac0a7e723dbaaa63836 SHA256 6ddba316a27d4aac5390b983e0ab905a80727c92a8b0c82e42f68a367b9a525c
 EBUILD open-vm-tools-0.0.20080515.93241.ebuild 3638 RMD160 70ab5b74e1c4452cdc6cc2bfaa61fa8048cc5309 SHA1 d95a10736c41eaf1970b50059f756bbff4506868 SHA256 9fcd8f3c40f8bd8cdb04fed77626b4a485ffc8680b876bfd5734c2a898393697
 EBUILD open-vm-tools-0.0.20080701.102166.ebuild 2701 RMD160 5bc76a6525535758de70ec1fbb57add017e7b1fa SHA1 6bb9d0bc96ed8b1fb9fafe3f8bca9b6cf736617a SHA256 e6dee5b5e4c2cf9aa8f0968b44e5f49acf96c813c65ed7e4bd7706e4f93dc1d8
-EBUILD open-vm-tools-0.0.20080808.109361.ebuild 2865 RMD160 d3ec05dfc264a49ed4ebee9a5e30446e09d14f5f SHA1 d3b2438fed7a2f5d8cd84719b9fa51572953a38c SHA256 9b94fc9f74e2ad3161da57c5cc6717c41ecccaf7ab77a5e8ad21f503fcc08eb4
-EBUILD open-vm-tools-0.0.20081010.123053.ebuild 2865 RMD160 d3ec05dfc264a49ed4ebee9a5e30446e09d14f5f SHA1 d3b2438fed7a2f5d8cd84719b9fa51572953a38c SHA256 9b94fc9f74e2ad3161da57c5cc6717c41ecccaf7ab77a5e8ad21f503fcc08eb4
+EBUILD open-vm-tools-0.0.20080808.109361.ebuild 2871 RMD160 a4ab87b0add35c93d2e348cca7684a35926d3f73 SHA1 8c049e8275ae5e9953418436d982a51800f036c1 SHA256 64a3e6359f1d5d950d40eee85d2edbaf1efbc066c78b17cf9be137639c891bf2
+EBUILD open-vm-tools-0.0.20081010.123053.ebuild 2871 RMD160 a4ab87b0add35c93d2e348cca7684a35926d3f73 SHA1 8c049e8275ae5e9953418436d982a51800f036c1 SHA256 64a3e6359f1d5d950d40eee85d2edbaf1efbc066c78b17cf9be137639c891bf2
